1998-10-24  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el, mel-q-ccl.el, mel.el, FLIM-ELS: Divide mel-ccl.el
	into mel-b-ccl.el and mel-q-ccl.el.

1998-09-11  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el (base64-encoded-length): New implementation.

1998-10-25  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-field-body): New function.

1998-10-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-encode-field-body): Change interface.
	(eword-encode-header): Use `eword-encode-field-body'; abolish
	function `eword-encode-field'.

1998-10-25  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-encode.el (eword-encode-field-body): New function.
	(eword-encode-field): Use `eword-encode-field-body'.

1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el, mel-b-el.el, FLIM-ELS: Rename mel-b.el -> mel-b-el.el.

1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel-u.el (uuencode-external-decode-region): Use
	`temporary-file-directory' instead of `mime-temp-directory'.
	(mime-write-decoded-region): Likewise.

	* mime-def.el: Abolish variable `mime-temp-directory'.

1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): New function.
	(insert-header): Use `mime-insert-header-from-buffer'.

1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM-ELS: Don't install mel-b-dl.el if the running emacs has
	builtin base64 encoder/decoder.

	* mel.el: Set up builtin base64 encoder/decoder if they are
	available.

	* mime-def.el (base64-dl-module): Set nil as initial value if the
	running emacs has builtin base64 encoder/decoder.

	* mel-b.el: Require `poe' instead of `emu'.
	(base64-encode-string): Use `defun-maybe'.
	(base64-encode-region): Likewise.
	(base64-decode-region): Likewise.
	(base64-decode-string): Likewise.

	* mel-b-dl.el: Require `poe' instead of `emu'.


1998-10-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.11.1 (Takanohara) was released.
